# sli-ui-toolkit

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: aur-publish.yml  ci.yml  publish.yml
demo/: README.md  __init__.py  __main__.py  app.py  config.py  icon_resolver.py  main.py
demo/components/: __init__.py  color_swatch.py  example_card.py  gallery_page.py  playground_card.py
demo/pages/: __init__.py  base_page.py  buttons_page.py  charts_page.py  comboboxes_page.py  composites_page.py  console_page.py  dialogs_page.py  feedback_page.py  flyouts_page.py  home_page.py  inputs_page.py  labels_page.py  lists_page.py  misc_page.py
docs/: API_CATALOG.md  ARCHITECTURE.md  BUTTON_API.md  BUTTON_ARCHITECTURE.md  DESIGN_LANGUAGE.md  FLYOUT_SYSTEM.md  KEYBOARD.md  README.md  ROADMAP.md  THEME_AUDIT.md
docs/dev/: ARCHITECTURE.md  BUTTON_REGION_ARCHITECTURE.md  DESIGN_LANGUAGE.md  README.md  ROADMAP.md
docs/user/: API_CATALOG.md  BUTTON_API.md  DESIGN_LANGUAGE.md  FLYOUT_SYSTEM.md  README.md  WINDOW_CHROME_API.md
src/sli_ui_toolkit/: __init__.py  config.py  deprecations.py  i18n.py  icons.py  managers.py  palettes.py  services.py  style.py  theme.py  widgets.py
src/sli_ui_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sli_ui_toolkit/core/: __init__.py  logging.py
src/sli_ui_toolkit/ui/: __init__.py  in_window_surface.py  popup_surface.py
src/sli_ui_toolkit/utils/: __init__.py  file_utils.py  paths.py
src/sli_ui_toolkit/workers/: __init__.py  generic_worker.py
tests/: conftest.py  test_adaptive_tab_strip.py  test_button_bg_resolve.py  test_button_corner_radii.py  test_button_custom_bg.py  test_button_pixmap_content.py  test_button_regions.py  test_button_row_marquee.py  test_button_underline.py  test_calendar_day_button.py  test_combo_focus_reveal.py  test_context_menu.py  test_context_menu_helpers.py  test_contrast.py  test_custom_line_edit.py  test_deprecated_imports.py  test_dialog_geometry_limits.py  test_dialog_shell.py  test_flyout_show_policy.py  test_flyout_slide_start.py  test_frameless_resize.py  test_help_document_blocks.py  test_help_document_view.py  test_hover_coordinator.py  test_i18n.py  test_icon_list_widget.py  test_icons.py  test_in_window_overlay.py  test_keyboard.py  test_marquee_band.py  test_no_font_bypass.py  test_public_api.py  test_rating_plus_does_not_select_row.py  test_rounded_window_mask.py  test_settle_gate.py  test_simple_options_flyout_width.py  test_theme.py  test_toast_progress_bar.py  test_tooltip_qrhi_watched.py  test_top_tab_bar.py  (+7 more)
(+209 files in other folders)
