[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sli-ui-toolkit"
version = "3.1.0"
description = "Reusable PySide6 UI toolkit primitives for SLI desktop tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "markdown>=3.4",
]
license = { text = "MIT" }
authors = [
    { name = "Loganavter" },
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-qt>=4.2",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Repository = "https://github.com/Loganavter/sli-ui-toolkit"
Issues = "https://github.com/Loganavter/sli-ui-toolkit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"sli_ui_toolkit" = ["resources/assets/icons/*.svg", "resources/assets/icons/light/*.svg", "resources/assets/icons/dark/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
